# ollog

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v3.4-MILESTONE-AUDIT.md  v3.5-MILESTONE-AUDIT.md  v3.6-MILESTONE-AUDIT.md
app/: admin_main.py  config.py  database.py  hashing.py  main.py  utils.py
docs/: adif-field-reference.md  admin-guide.md  api-reference.md  deployment.md  getting-started.md  index.md  openapi.json  troubleshooting.md
site/: 404.html  index.html  sitemap.xml
static/: llms-full.txt  llms.txt
templates/: base.html  base_app.html
tests/: conftest.py  test_aclog_client.py  test_aclog_identity.py  test_aclog_parser.py  test_adif_duplicate_review.py  test_adif_export.py  test_adif_import.py  test_adif_parser.py  test_adif_roundtrip.py  test_adif_serializer.py  test_admin_api.py  test_admin_clear_log.py  test_auth.py  test_backup_restore.py  test_clear_log.py  test_concurrent_writes.py  test_custom_qso_fields.py  test_duplicate_detection.py  test_hashing.py  test_internal_logs.py  test_llms.py  test_log_view_notify_sound.py  test_migration.py  test_operator_isolation.py  test_prefix_resolver.py  test_profile_api.py  test_profile_grid.py  test_profile_ui.py  test_qso_api.py  test_qso_api_key.py  test_qso_collection_migration.py  test_qso_collections.py  test_qso_schema.py  test_stats.py  (+10 more)
(+678 files in other folders)
