[project]
name = "ollog"
version = "0.1.0"
description = "Ham Radio Online Logbook"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.0",
    "beanie>=2.1.0",
    "pymongo>=4.16.0",
    "pyjwt>=2.12.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
